--- a/src/auth/register/register.module.css
+++ b/src/auth/register/register.module.css
@@ -12,35 +12,41 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
     border-radius: 16px;
     width: 500px;
+    height: 519px;
     display: flex;
     flex-direction: column;
-    padding: 16px;
+    padding: 5px 16px;
     box-sizing: border-box
 }
 
 .title {
+    font-weight: 400;
     font-size: 20px;
     line-height: 23px;
-    margin-bottom: 16px
+    margin-bottom: 5px;
+    text-align: left;
 }
 
 .label {
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    margin-bottom: 32px;
-    position: relative
+    gap: 10px;
+    margin-bottom: 15px;
+    position: relative;
+    text-align: left;
+    font-size: 16px;
+    font-weight: 400
 }
 
 .input {
     background: #F8F8F8;
     border-radius: 8px;
     border: none;
-    height: 48px;
+    height: 20px;
     color: #808185;
     font-size: 14px;
     line-height: 16px;
-    padding: 16px 8px 16px 16px
+    padding: 12px 8px 12px 16px;
 }
 
 .inputError {
@@ -55,10 +61,11 @@
 
 .error {
     color: #FF6161;
-    font-size: 13px;
+    font-size: 10px;
     line-height: 12px;
     position: absolute;
-    bottom: -27px
+    bottom: -22px;
+    font-weight: 400
 }
 
 .showPassword {
@@ -81,7 +88,10 @@
     border-radius: 8px;
     height: 48px;
     color: #FFFFFF;
-    transition: 0.3s
+    transition: 0.3s;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 5px;
 }
 
 .submit:disabled {
